- mise en place d'un repo json pour convertir plusieurs fichiers d'un coup  - ajout de balises

--- a/www/toto.html
+++ b/www/toto.html
@@ -19,6 +19,6 @@
 voici un commentaire
 sur plusieurs lignes
  -->
-<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p><a href='toto.html' >lien</a>
+<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p><a href='index.html' >lien</a>
 </body>
 </html>
