--- a/www/toto.html
+++ b/www/toto.html
@@ -5,7 +5,8 @@
 
 <meta name='Description' content='Voila une jolie description' />
 <meta charset='utf-8' />
-<title>ma premiere page HTML en Json</title><link type='text/css' rel='stylesheet' 
+<title>ma premiere page HTML en Json</title>
+<link type='text/css' rel='stylesheet' 
 	href='http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923' />
 <style>
 	body .toto {
