- mise en place d'un repo json pour convertir plusieurs fichiers d'un coup  - ajout de balises

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 	href='http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923' />
 <style>
 	body .toto {
-		color: black;
+		color: purple;
 	}
 </style>
 </head>
@@ -20,6 +20,9 @@
 voici un commentaire
 sur plusieurs lignes
  -->
-<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p><a href='toto.html' >lien</a>
+<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
+<br />
+<br />
+<a href='toto.html' >lien</a>
 </body>
 </html>
