--- a/www/toto.html
+++ b/www/toto.html
@@ -20,6 +20,9 @@
 voici un commentaire
 sur plusieurs lignes
  -->
-<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p><a href='index.html' >lien</a>
+<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
+<br />
+<br />
+<a href='index.html' >lien</a>
 </body>
 </html>
