- mise en place d'un repo json pour convertir plusieurs fichiers d'un coup  - ajout de balises

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,6 @@ sur plusieurs lignes
 <p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
 <br />
 <br />
-<a href='toto.html' >lien</a>
+<a href='toto.html' >lien</a><img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '  />
 </body>
 </html>
