amelioration de la lib

--- a/www/toto.html
+++ b/www/toto.html
@@ -1,3 +1,5 @@
+<!Doctype html>
+<html>
 
 <head>
 
@@ -8,7 +10,7 @@
 	href='http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923' />
 <style>
 	body .toto {
-		color: black;
+		color: purple;
 	}
 </style>
 </head>
@@ -21,5 +23,6 @@ sur plusieurs lignes
 <p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
 <br />
 <br />
-<a href='index.html' >lien</a>
+<a href='index.html' >lien</a><img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '  />
 </body>
+</html>
