amelioration de la lib

--- a/www/index.html
+++ b/www/index.html
@@ -3,11 +3,12 @@
 
 <head>
 
-<meta name='Description' content='Voila une jolie description' />
-<meta charset='utf-8' />
+<meta name="Description" content="Voila une jolie description"  />
+<meta charset="utf-8"  />
 <title>ma premiere page HTML en Json</title>
-<link type='text/css' rel='stylesheet' 
-	href='http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923' />
+<link type="text/css" rel="stylesheet" href="http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923"  />
+<script type="application/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous" ></script>
+<script type="application/javascript" src="js/script.js" ></script>
 <style>
 	body .toto {
 		color: purple;
@@ -26,5 +27,9 @@ sur plusieurs lignes
 <a href='toto.html' >lien</a>
 <br />
 <img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '  />
+<div>
+	<p class='toto' >test de new div</p><span style='color:gray; ' >voici ma première span !! je suis heureux</span>
+</div>
+
 </body>
 </html>
