--- a/www/index.html
+++ b/www/index.html
@@ -3,17 +3,19 @@
 
 <head>
 
-<meta name="Description" content="Voila une jolie description"  />
-<meta charset="utf-8"  />
-<title>ma premiere page HTML en Json</title>
-<link type="text/css" rel="stylesheet" href="http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923"  />
-<script type="application/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous" ></script>
-<script type="application/javascript" src="js/script.js" ></script>
-<style>
-	body .toto {
-		color: purple;
-	}
-</style>
+	<meta name="Description" content="Voila une jolie description"/>
+	<meta charset="utf-8"/>
+	<title>ma premiere page HTML en Json</title>
+	<link type="text/css" rel="stylesheet"
+		  href="http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923"/>
+	<script type="application/javascript" src="https://code.jquery.com/jquery-3.3.1.js"
+			integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	<script type="application/javascript" src="js/script.js"></script>
+	<style>
+		body .toto {
+			color: purple;
+		}
+	</style>
 </head>
 <body>
 
@@ -21,14 +23,14 @@
 voici un commentaire
 sur plusieurs lignes
  -->
-<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
-<br />
-<br />
-<a href='toto.html' >lien</a>
-<br />
-<img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '  />
+<p class='toto '>Voici mon premier paragraphe avec la classe `toto` !</p>
+<br/>
+<br/>
+<a href='toto.html'>lien</a>
+<br/>
+<img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '/>
 <div>
-	<p class='toto' >test de new div</p><span style='color:gray; ' >voici ma première span !! je suis heureux</span>
+	<p class='toto'>test de new div</p><span style='color:gray; '>voici ma première span !! je suis heureux</span>
 </div>
 
 </body>
