--- a/www/toto.html
+++ b/www/toto.html
@@ -3,15 +3,16 @@
 
 <head>
 
-<meta name="Description" content="Voila une jolie description"  />
-<meta charset="utf-8"  />
-<title>ma premiere page HTML en Json</title>
-<link type="text/css" rel="stylesheet" href="http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923"  />
-<style>
-	body .toto {
-		color: purple;
-	}
-</style>
+	<meta name="Description" content="Voila une jolie description"/>
+	<meta charset="utf-8"/>
+	<title>ma premiere page HTML en Json</title>
+	<link type="text/css" rel="stylesheet"
+		  href="http://images.doctissimo.fr/generated/forum/compressed/pictures.css?v=1523521923"/>
+	<style>
+		body .toto {
+			color: purple;
+		}
+	</style>
 </head>
 <body>
 
@@ -19,11 +20,11 @@
 voici un commentaire
 sur plusieurs lignes
  -->
-<p class='toto ' >Voici mon premier paragraphe avec la classe `toto` !</p>
-<br />
-<br />
-<a href='index.html' >lien</a>
-<br />
-<img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '  />
+<p class='toto '>Voici mon premier paragraphe avec la classe `toto` !</p>
+<br/>
+<br/>
+<a href='index.html'>lien</a>
+<br/>
+<img src='http://medias.doctissimo.fr/css/2012/images/logo_head_doctissimo.png' alt='test' style='background:blue; '/>
 </body>
 </html>
