--- a/www/doc.html
+++ b/www/doc.html
@@ -13,13 +13,23 @@
 <div>
 	<span> - &lt;!-- ... --&gt;</span>
 	<br/>
-	<span> - &lt;meta /&gt;</span>
+	<span> - &lt;Doctype&gt;&lt;/Doctype&gt;</span>
 	<br/>
-	<span> - &lt;link /&gt;</span>
+	<span> - &lt;html&gt;&lt;/html&gt;</span>
+	<br/>
+	<span> - &lt;head&gt;&lt;/head&gt;</span>
+	<br/>
+	<span> - &lt;metas&gt;&lt;/metas&gt;</span>
+	<br/>
+	<span> - &lt;link&gt;&lt;/link&gt;</span>
 	<br/>
 	<span> - &lt;script&gt;&lt;/script&gt;</span>
 	<br/>
+	<span> - &lt;title&gt;&lt;/title&gt;</span>
+	<br/>
 	<span> - &lt;style&gt;&lt;/style&gt;</span>
+	<br/>
+	<span> - &lt;body&gt;&lt;/body&gt;</span>
 	<br/>
 	<span> - &lt;div&gt;&lt;/div&gt;</span>
 	<br/>
@@ -29,9 +39,11 @@
 	<br/>
 	<span> - &lt;b&gt;&lt;/b&gt;</span>
 	<br/>
-	<span> - &lt;br /&gt;</span>
+	<span> - &lt;br&gt;&lt;/br&gt;</span>
 	<br/>
-	<span> - &lt;img /&gt;</span>
+	<span> - &lt;img&gt;&lt;/img&gt;</span>
+	<br/>
+	<span> - &lt;span&gt;&lt;/span&gt;</span>
 	<br/>
 
 </div>
